feat: test banner i18n key

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -1,7 +1,6 @@
 {
 	"core": {
 		"text": {
-			"test_banner": "For testing purposes only!",
 			"cancel": "Cancel",
 			"next": "Next",
 			"save": "Save",
@@ -13,6 +12,9 @@
 			"symbol": "Symbol",
 			"decimals": "Decimals",
 			"amount": "Amount"
+		},
+		"info": {
+			"test_banner": "For testing purposes only!"
 		},
 		"alt": {
 			"logo": "$name logo"
