--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -254,14 +254,12 @@
 	"tokens": {
 		"text": {
 			"title": "Tokens",
-			"add_new": "Add new token",
 			"contract_address": "Contract address",
-			"add": "Add token",
 			"review": "Review",
 			"saving": "Saving...",
 			"balance": "Balance",
 			"hide_zero_balances": "Hide zero balances",
-			"import_tokens": "+ Import tokens"
+			"import_tokens": "Import tokens"
 		},
 		"placeholder": {
 			"enter_contract_address": "Enter an ERC20 contract address"
