feat: send steps i18n

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -190,8 +190,11 @@
 			"review": "Review",
 			"approving": "Approving...",
 			"refreshing_ui": "Refreshing UI",
+			"initializing": "Initializing transaction...",
+			"signing_transaction": "'Signing transaction...'",
 			"sending": "Sending...",
 			"signing": "Signing...",
+			"signing_message": "Signing message...",
 			"network": "Network",
 			"source_network": "Source network",
 			"destination_network": "Destination network",
