--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -110,9 +110,7 @@
 			"session": "Your session expires in",
 			"session_description": "All sessions last 1 hour. After 1 hour, you will need to authenticate again with Internet Identity.",
 			"testnets": "Show test networks",
-			"testnets_description": "Display the test networks (Sepolia) and twin tokens on testnets (ckTESTBTC and ckSepolia).",
-			"tokens": "Tokens",
-			"tokens_description": "The list of tokens currently supported by your $oisy_name."
+			"testnets_description": "Display the test networks (Sepolia) and twin tokens on testnets (ckTESTBTC and ckSepolia)."
 		},
 		"alt": {
 			"testnets_toggle": "Toggle to show or hide testnets"
