--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -108,9 +108,7 @@
 			"principal_copied": "Principal copied to clipboard",
 			"principal_description": "Your ID for the $oisy_name. Created by your Internet Identity.",
 			"session": "Your session expires in",
-			"session_description": "All sessions last 1 hour. After 1 hour, you will need to authenticate again with Internet Identity.",
-			"testnets": "Show test networks",
-			"testnets_description": "Display the test networks (Sepolia) and twin tokens on testnets (ckTESTBTC and ckSepolia)."
+			"session_description": "All sessions last 1 hour. After 1 hour, you will need to authenticate again with Internet Identity."
 		},
 		"alt": {
 			"testnets_toggle": "Toggle to show or hide testnets"
