--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -274,8 +274,11 @@
 			"review": "Review",
 			"saving": "Saving..."
 		},
+		"manage": {
+			"title": "Manage tokens"
+		},
 		"hide": {
-			"title": "Hide Token?",
+			"title": "Hide token?",
 			"token": "Hide $token",
 			"info": "You can add this token back in the future by going into <strong>“+ Import tokens”</strong> in your wallet view.",
 			"confirm": "Hide",
@@ -288,7 +291,8 @@
 			"open_contract_address_block_explorer": "Open the contract address on a block explorer"
 		},
 		"placeholder": {
-			"enter_contract_address": "Enter an ERC20 contract address"
+			"enter_contract_address": "Enter an ERC20 contract address",
+			"search_token": "Search for the token"
 		},
 		"warning": {
 			"trust_token": "Make sure that you trust the token that you are adding. If the token you are adding is controlled by a malicious party, they could try and scam you e.g. by making you believe you received a significant amount of tokens in order to trick you into sending them tokens in return or perform other undesired actions. Learn more about scams and security risks e.g. <a rel=\"noreferrer noopener\" target=\"_blank\" href=\"https://support.metamask.io/hc/en-us/articles/4403988839451\">here</a>."
