--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -286,9 +286,14 @@
 			}
 		},
 		"manage": {
-			"title": "Manage tokens",
-			"do_not_see_import": "Don’t see your token? Import",
-			"clear_filter": "Clear filter"
+			"text": {
+				"title": "Manage tokens",
+				"do_not_see_import": "Don’t see your token? Import",
+				"clear_filter": "Clear filter"
+			},
+			"error": {
+				"unexpected_build": "An unexpected error happened while building the list of known tokens."
+			}
 		},
 		"hide": {
 			"title": "Hide token?",
