feat: save tokens

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -292,7 +292,8 @@
 				"clear_filter": "Clear filter"
 			},
 			"error": {
-				"unexpected_build": "An unexpected error happened while building the list of known tokens."
+				"unexpected_build": "An unexpected error happened while building the list of known tokens.",
+				"empty": "No tokens to enable or disable have been selected."
 			}
 		},
 		"hide": {
