feat: use different text for import token on icp

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -288,7 +288,7 @@
 		},
 		"manage": {
 			"text": {
-				"title": "Manage tokens",
+				"title": "Add and hide tokens",
 				"do_not_see_import": "Don’t see your token? Import",
 				"clear_filter": "Clear filter"
 			},
