--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -300,7 +300,7 @@
 		"hide": {
 			"title": "Hide token?",
 			"token": "Hide $token",
-			"info": "You can add this token back in the future by going into <strong>“+ Import tokens”</strong> in your wallet view.",
+			"info": "You can add this token back in the future by going into <strong>“+ $where”</strong> in your wallet view.",
 			"confirm": "Hide",
 			"hiding": "Hiding..."
 		},
@@ -319,11 +319,14 @@
 		},
 		"error": {
 			"invalid_contract_address": "Contract address is invalid.",
+			"invalid_ledger": "The selected token is not linked with an Icrc Ledger canister.",
+			"invalid_index": "The selected token is not linked with an Icrc Index canister.",
 			"no_metadata": "No metadata were fetched for the contract address.",
 			"unexpected": "Something went wrong while saving the token.",
 			"unexpected_hiding": "Something went wrong while hiding the token.",
 			"already_available": "Token is already available.",
-			"loading_metadata": "Error while loading the ERC20 contract metadata."
+			"loading_metadata": "Error while loading the ERC20 contract metadata.",
+			"not_custom": "Only custom token can be hidden."
 		}
 	},
 	"fee": {
