feat: convert USDC to ckUSDC (#1167)

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -77,6 +77,7 @@
 			"no_etherscan_rest_api": "No Etherscan Rest API for network $network",
 			"no_infura_provider": "No Infura provider for network $network",
 			"no_infura_cketh_provider": "No Infura CkETH provider for network $network",
+			"no_infura_ckerc20_provider": "No Infura CkErc20 provider for network $network",
 			"no_infura_erc20_provider": "No Infura ERC20 provider for network $network",
 			"no_infura_erc20_icp_provider": "No Infura ERC20 Icp provider for network $network",
 			"eth_address_unknown": "ETH address is unknown.",
@@ -234,6 +235,7 @@
 			"convert_to_btc": "Convert to BTC",
 			"convert_to_eth": "Convert to ETH",
 			"convert_to_cketh": "Convert to ckETH",
+			"convert_to_ckerc20": "Convert to $ckErc20",
 			"convert_eth_to_cketh": "Convert ETH to ckETH",
 			"how_to_convert_eth_to_cketh": "Here is how to can convert ETH to ckETH on $oisy_name",
 			"send_eth": "Send ETH to your $oisy_name address",
