feat: send steps for approval before transfer (ckErc20)

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -179,7 +179,9 @@
 			"source": "Source",
 			"balance": "Balance",
 			"review": "Review",
+			"signing_approval": "Signing approval...",
 			"approving": "Approving...",
+			"approving_wallet_connect": "Approving WalletConnect request...",
 			"refreshing_ui": "Refreshing UI",
 			"initializing": "Initializing transaction...",
 			"signing_transaction": "Signing transaction...",
