--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -240,11 +240,12 @@
 			"convert_to_eth": "Convert to ETH",
 			"convert_to_cketh": "Convert to ckETH",
 			"convert_to_ckerc20": "Convert to $ckErc20",
-			"convert_eth_to_cketh": "Convert ETH to ckETH",
-			"how_to_convert_eth_to_cketh": "Here is how to can convert ETH to ckETH on $oisy_name",
-			"send_eth": "Send ETH to your $oisy_name address",
-			"wait_eth_current_balance": "Wait for ETH to arrive. Current balance",
-			"set_amount": "Set amount for conversion"
+			"convert_eth_to_cketh": "Convert $token to $ckToken",
+			"how_to_convert_eth_to_cketh": "Here is how to can convert $token to $ckToken on $oisy_name",
+			"send_eth": "Send $token to your $oisy_name address",
+			"wait_eth_current_balance": "Wait for $token to arrive. Current balance",
+			"set_amount": "Set amount for conversion",
+			"send_fee": "Ensure you have also $token to cover the fee. Current balance"
 		},
 		"error": {
 			"loading_cketh_helper": "Error while loading the ckETH helper contract address. No minter canister ID has been initialized."
@@ -345,9 +346,10 @@
 			"receive": "Receive from BTC network"
 		},
 		"ethereum": {
-			"title": "Receive ETH from Ethereum Network and convert to ckETH",
-			"description": "With a few steps, transfer and convert your Ethereum (ETH) to ckETH directly within the $oisy_name.",
-			"how_to": "How to convert ETH to ckETH"
+			"title": "Receive $token and convert to $ckToken",
+			"description": "With a few steps, transfer and convert your $tkName ($token) from the $network Network to $ckToken directly within the $oisy_name.",
+			"how_to": "How to convert $token to $ckToken",
+			"how_to_short": "How to convert $token"
 		}
 	},
 	"wallet_connect": {
