--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -239,7 +239,7 @@
 	"convert": {
 		"text": {
 			"convert_to_btc": "Convert to BTC",
-			"convert_to_eth": "Convert to ETH",
+			"convert_to_token": "Convert to $token",
 			"convert_to_cketh": "Convert to ckETH",
 			"convert_to_ckerc20": "Convert to $ckErc20",
 			"convert_eth_to_cketh": "Convert $token to $ckToken",
