--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -183,6 +183,7 @@
 			"review": "Review",
 			"signing_approval": "Signing approval...",
 			"approving": "Approving...",
+			"approving_fees": "Approving fees...",
 			"approving_wallet_connect": "Approving WalletConnect request...",
 			"refreshing_ui": "Refreshing UI",
 			"initializing": "Initializing transaction...",
