--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -87,6 +87,8 @@
 			"erc20_contracts": "Error while loading the ERC20 contracts.",
 			"minter_ckbtc_btc": "A configured minter is required to convert ckBTC to BTC.",
 			"minter_cketh_eth": "A configured minter is required to convert ckETH to ETH.",
+			"minter_ckerc20_erc20": "A configured minter is required to convert ckERC20 to Erc20.",
+			"ledger_cketh_eth": "A configured ckETH ledger is required to convert ckErc20 to Erc20.",
 			"minter_btc": "A configured minter is required to retrieve BTC.",
 			"minter_ckbtc_info": "A configured minter is required to fetch the ckBTC info",
 			"minter_cketh_info": "A configured minter is required to fetch the ckETH info",
