feat: in case two approving are displayed

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -186,6 +186,7 @@
 			"signing_approval": "Signing approval...",
 			"approving": "Approving...",
 			"approving_fees": "Approving fees...",
+			"approving_transfer": "Approving transfer...",
 			"approving_wallet_connect": "Approving WalletConnect request...",
 			"refreshing_ui": "Refreshing UI",
 			"initializing": "Initializing transaction...",
