--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -145,6 +145,7 @@
 		"ethereum": {
 			"text": {
 				"checking_status": "Checking $token status...",
+				"converting": "Converting $token to $ckToken",
 				"from_network": "Receive from $network Network",
 				"eth_to_cketh_description": "Converting $token into $ckToken requires a call to a smart contract on $network and passing your IC principal as argument – $oisy_name simplifies this procedure by enabling you to perform the conversion directly within the wallet.",
 				"learn_how_to_convert": "Learn how to convert $token to $ckToken",
