--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -145,7 +145,6 @@
 		"ethereum": {
 			"text": {
 				"checking_status": "Checking $token status...",
-				"converting": "Converting $token to $ckToken",
 				"from_network": "Receive from $network Network",
 				"eth_to_cketh_description": "Converting $token into $ckToken requires a call to a smart contract on $network and passing your IC principal as argument – $oisy_name simplifies this procedure by enabling you to perform the conversion directly within the wallet.",
 				"learn_how_to_convert": "Learn how to convert $token to $ckToken",
@@ -439,6 +438,16 @@
 			"included": "Included",
 			"safe": "Safe",
 			"finalised": "Finalised"
+		},
+		"label": {
+			"reimbursement": "Reimbursement",
+			"twin_token_received": "$twinToken received",
+			"twin_token_sent": "$twinToken sent",
+			"receiving_twin_token": "Receiving $twinToken",
+			"sending_twin_token": "Sending $twinToken",
+			"sending_twin_token_failed": "Sending $twinToken failed",
+			"converting_twin_token": "Converting $twinToken to $ckToken",
+			"twin_network": "$twinNetwork network"
 		},
 		"alt": {
 			"open_block_explorer": "Open this transaction on a block explorer",
