feat: token modal standard and canister ids

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -275,7 +275,8 @@
 			"token": "Token",
 			"network": "Network",
 			"contract_address_copied": "Contract address copied to clipboard.",
-			"twin_token": "Twin token"
+			"twin_token": "Twin token",
+			"standard": "Standard"
 		},
 		"import": {
 			"text": {
