feat: token modal standard and canister ids (#1247)
* feat: token modal standard and canister ids

* feat: display canister ids

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -275,7 +275,8 @@
 			"token": "Token",
 			"network": "Network",
 			"contract_address_copied": "Contract address copied to clipboard.",
-			"twin_token": "Twin token"
+			"twin_token": "Twin token",
+			"standard": "Standard"
 		},
 		"import": {
 			"text": {
@@ -284,6 +285,10 @@
 				"saving": "Saving...",
 				"ledger_canister_id": "Ledger Canister ID",
 				"index_canister_id": "Index Canister ID",
+				"minter_canister_id": "Minter Canister ID",
+				"ledger_canister_id_copied": "Ledger Canister ID copied to clipboard.",
+				"index_canister_id_copied": "Index Canister ID copied to clipboard.",
+				"minter_canister_id_copied": "Minter Canister ID copied to clipboard.",
 				"verifying": "Verifying token details...",
 				"add_the_token": "Add the token"
 			},
