--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -341,7 +341,9 @@
 			"unexpected_hiding": "Something went wrong while hiding the token.",
 			"already_available": "Token is already available.",
 			"loading_metadata": "Error while loading the ERC20 contract metadata.",
-			"not_custom": "Only custom token can be hidden."
+			"not_custom": "Only custom token can be hidden.",
+			"incomplete_metadata": "No name or symbol are provided in the metadata.",
+			"duplicate_metadata": "A token with a similar name or symbol already exists."
 		}
 	},
 	"fee": {
