--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -295,7 +295,9 @@
 			"error": {
 				"loading_metadata": "Error while loading the metadata of the token.",
 				"no_metadata": "No metadata for the token are provided. This is unexpected.",
-				"unexpected_index": "Something went wrong while validating the Index canister."
+				"unexpected_index": "Something went wrong while validating the Index canister.",
+				"unexpected_index_ledger": "Something went wrong while loading the Ledger ID related to the Index canister.",
+				"invalid_ledger_id": "The Ledger ID is not related the Index canister."
 			}
 		},
 		"manage": {
