feat: created custom component SendInputAmount that has an optional Max button

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -11,7 +11,8 @@
 			"name": "Name",
 			"symbol": "Symbol",
 			"decimals": "Decimals",
-			"amount": "Amount"
+			"amount": "Amount",
+			"max": "Max"
 		},
 		"info": {
 			"test_banner": "For testing purposes only!"
