fix: improved aria-label as per review

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -199,7 +199,8 @@
 			"source_network": "Source network",
 			"destination_network": "Destination network",
 			"initializing_transaction": "Initializing transaction",
-			"convert_to_native_icp": "Convert to native ICP"
+			"convert_to_native_icp": "Convert to native ICP",
+			"open_qr_modal": "Start QR Code scan for transaction details"
 		},
 		"placeholder": {
 			"enter_eth_address": "Enter public address (0x)",
