--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -455,7 +455,8 @@
 			"to": "To",
 			"to_copied": "To address copied to clipboard.",
 			"block": "Block",
-			"interacted_with": "Interacted With (To)"
+			"interacted_with": "Interacted With (To)",
+			"pending": "Pending..."
 		},
 		"status": {
 			"included": "Included",
