--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -355,7 +355,8 @@
 			"loading_metadata": "Error while loading the ERC20 contract metadata.",
 			"not_custom": "Only custom token can be hidden.",
 			"incomplete_metadata": "No name or symbol are provided in the metadata.",
-			"duplicate_metadata": "A token with a similar name or symbol already exists."
+			"duplicate_metadata": "A token with a similar name or symbol already exists.",
+			"unexpected_undefined": "Token is undefined. This is unexpected."
 		}
 	},
 	"fee": {
