chore: according to review, created two different strings to separate hide and show

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -276,7 +276,8 @@
 			"all_tokens_with_zero_hidden": "All tokens with zero balance are currently hidden.",
 			"initializing": "Initializing...",
 			"updating_ui": "Updating the UI...",
-			"show_hide_token": "Show or hide token"
+			"show_token": "Show token",
+			"hide_token": "Hide token"
 		},
 		"details": {
 			"title": "Token details",
