chore: change aria label of IcManageTokenToggle (#1488)
* chore: change aria label of IcManageTokenToggle

* chore: according to review, created two different strings to separate hide and show

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -275,7 +275,9 @@
 			"hide_zero_balances": "Hide zero balances",
 			"all_tokens_with_zero_hidden": "All tokens with zero balance are currently hidden.",
 			"initializing": "Initializing...",
-			"updating_ui": "Updating the UI..."
+			"updating_ui": "Updating the UI...",
+			"show_token": "Show token",
+			"hide_token": "Hide token"
 		},
 		"details": {
 			"title": "Token details",
