refactor: as per review, the new components will have the same logic as SendNetwork

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -317,6 +317,9 @@
 				"title": "Add and hide tokens",
 				"do_not_see_import": "Don’t see your token? Import",
 				"clear_filter": "Clear filter",
+				"network": "Network"
+			},
+			"placeholder": {
 				"select_network": "Select network"
 			},
 			"info": {
