feat: created new component AddTokenByNetwork (#1502)
* feat: created new component AddTokenByNetwork

* style: include fade effect when switching networks

* fix: removed reset of local variables

* refactor: as per review, the new components will have the same logic as SendNetwork

* chore: renamed variable to erc20ContractAddress

* fix: according to review, we use all networks

* fix: find network name not among networksMainnets

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -317,7 +317,11 @@
 				"title": "Add and hide tokens",
 				"do_not_see_import": "Don’t see your token? Import",
 				"clear_filter": "Clear filter",
-				"manage_for_network": "Managing tokens for $network"
+				"manage_for_network": "Managing tokens for $network",
+				"network": "Network"
+			},
+			"placeholder": {
+				"select_network": "Select network"
 			},
 			"info": {
 				"outdated_index_canister": "$token Index canister is outdated and incompatible with Oisy Wallet. Contact the project team to propose an upgrade."
