feat: rename call to action "Manage tokens"

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -314,7 +314,7 @@
 		},
 		"manage": {
 			"text": {
-				"title": "Add and hide tokens",
+				"title": "Manage tokens",
 				"do_not_see_import": "Don’t see your token? Import",
 				"clear_filter": "Clear filter",
 				"manage_for_network": "Managing tokens for $network",
