--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -318,7 +318,7 @@
 				"do_not_see_import": "Don’t see your token? Import",
 				"clear_filter": "Clear filter",
 				"manage_for_network": "Managing tokens for $network",
-				"network": "Network"
+				"network": "Select the network"
 			},
 			"placeholder": {
 				"select_network": "Select network"
