--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -312,7 +312,8 @@
 				"invalid_ledger_id": "The Ledger ID is not related the Index canister.",
 				"missing_ledger_id": "The Ledger ID is missing. Did you provide a value?",
 				"missing_index_id": "The Index ID is missing. Did you provide a value?",
-				"missing_contract_address": "The contract address is missing. Did you provide a value?"
+				"missing_contract_address": "The contract address is missing. Did you provide a value?",
+				"no_network": "No network is selected. This is unexpected."
 			}
 		},
 		"manage": {
