--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -113,6 +113,14 @@
 			"website": "Image of $dAppName"
 		}
 	},
+	"airdrops": {
+		"text": {
+			"title": "Airdrops"
+		},
+		"alt": {
+
+		}
+	},
 	"footer": {
 		"text": {
 			"incubated_with": "Incubated with",
