adds airdrops page

--- a/src/frontend/src/lib/i18n/en.json
+++ b/src/frontend/src/lib/i18n/en.json
@@ -111,6 +111,11 @@
 			"website": "Image of $dAppName"
 		}
 	},
+	"airdrop": {
+		"text": {
+			"title": "Airdrops"
+		}
+	},
 	"footer": {
 		"text": {
 			"incubated_with": "Incubated with",
